javali_tests/HW1/HelloWorld.javali.err
Debug information for file: javali_tests\HW1\HelloWorld.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | | VarDecl (name: x, type: int)
| | Seq ()
| | | Assign ()
| | | | Var (name: x)
| | | | IntConst (value: 5)

Phase exec failed because we expected to see:

But we actually saw:
Error: 35584

The difference is:
At line   1 /   1:
< 
> Error: 35584

